# paper-millennialifier

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
netlify/functions/: parse.mjs  providers.mjs  translate.mjs
public/: index.html
src/millenialifier/: cli.py  prompts.py  translator.py  web.py
src/millenialifier/parsers/: __init__.py  fetcher.py  html.py  pdf.py
src/millenialifier/providers/: __init__.py  anthropic.py  base.py  google.py  openai_compat.py
src/millennialifier/: __init__.py  cli.py  models.py  prompts.py  translator.py  web.py
src/millennialifier/parsers/: __init__.py  fetcher.py  html.py  pdf.py
src/millennialifier/providers/: __init__.py  anthropic.py  google.py  openai_compat.py
templates/: index.html
